# msh

./: .gitignore  CMakeLists.txt
.clang-format/: clang_format
backup/: parse_backup.c
include/: my_shell.h  parse.h
src/: exec.c  exec.h  main.c  memalloc.c  memalloc.h  parse.c  parse.h
